--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "@nestjs/mongoose": "^7.0.1",
     "@nestjs/passport": "^7.1.0",
     "@nestjs/platform-express": "^7.0.0",
+    "connect-flash": "^0.1.1",
+    "express-handlebars": "^5.0.0",
+    "express-session": "^1.17.1",
     "mongoose": "^5.9.22",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
@@ -37,7 +40,10 @@
     "@nestjs/cli": "^7.0.0",
     "@nestjs/schematics": "^7.0.0",
     "@nestjs/testing": "^7.0.0",
-    "@types/express": "^4.17.3",
+    "@types/connect-flash": "0.0.35",
+    "@types/express": "^4.17.7",
+    "@types/express-handlebars": "^3.1.0",
+    "@types/express-session": "^1.17.0",
     "@types/jest": "25.2.3",
     "@types/node": "^13.9.1",
     "@types/passport-local": "^1.0.33",
